# pay-port

./: .gitignore  .python-version  Dockerfile  deploy.py  git_ignore_file_remove.sh  pay-port.js  pyproject.toml  requirements.txt
.config/local_dev/: gunicorn.py  iamport.nginx  supervisord.conf
app/: Untitled.ipynb  common.py  db.sqlite3  fran_list.json  사업자등록.ipynb
app/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  사업자등록-checkpoint.ipynb
app/config/: settings.py  urls.py  urls_admin.py
app/config/settings/: __init__.py  base.py  local.py  settings_admin.py
app/config/wsgi/: admin.py  dev.py  local.py  prod.py
app/members/: admin.py  exceptions.py  serializer_method_override.py  serializers.py  urls.py  views.py
app/members/admin/: __init__.py  agency.py  franchisee_user.py  paygouser.py
app/members/migrations/: 0001_initial.py  0002_auto_20210414_1735.py  0002_auto_20210423_1225.py  0002_connectpaygousermanager.py  0002_remove_paygouser_mid.py  0003_auto_20210205_0843.py  0003_auto_20210416_1650.py  0004_paygouser_business_type.py
app/members/models/: __init__.py  agency.py  franchisee.py  user.py
app/members/serializers/: __init__.py  franchisee_serializers.py  signup.py  user_serializers.py
app/members/views/: __init__.py  franchisee_views.py  normal_user_views.py  singup_views.py
app/owners/: admin.py  excepts.py  models.py  serializer_method_override.py  serializers.py  urls.py  views.py
app/payments/: admin.py  exceptsions.py  models.py  urls.py  views.py
app/paymethod/: admin.py  apps.py  exceptions.py  models.py  urls.py
(+40 files in other folders)
